# macops-molcodesignchecker

./: BUILD  MODULE.bazel  MOLCodesignChecker.podspec  Podfile  README.md  WORKSPACE
.allstar/: binary_artifacts.yaml
MOLCodesignChecker.xcodeproj/: project.pbxproj
MOLCodesignChecker.xcworkspace/: contents.xcworkspacedata
Source/: MOLCodesignChecker.h  MOLCodesignChecker.m
Source/MOLCodesignChecker/: MOLCodesignChecker.h  MOLCodesignChecker.m
Tests/: MOLCodesignCheckerTest.m
